--- a/dashboard.html
+++ b/dashboard.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Light Bootstrap Dashboard by Creative Tim</title>
+    <title>Erbal App</title>
 
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -36,19 +36,14 @@
 <body>
 
     <div class="wrapper">
-        <div class="sidebar" data-color="purple" data-image="assets/img/sidebar-5.jpg">
-
+        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-5.jpg">
             <!--
-
-        Tip 1: you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple"
         Tip 2: you can also add an image using data-image tag
-
     -->
-
             <div class="sidebar-wrapper">
                 <div class="logo">
                     <a class="simple-text">
-                    WhiskyWatch
+                    Erbal App
                 </a>
                 </div>
 
@@ -56,51 +51,28 @@
                     <li class="active">
                         <a href="dashboard.html">
                             <i class="pe-7s-graph"></i>
-                            <p>Dashboard</p>
+                            <p>Monitoring</p>
                         </a>
                     </li>
-                    <!--<li>
-                    <a href="user.html">
+                    <li>
+                        <a href="user.html">
                         <i class="pe-7s-user"></i>
                         <p>User Profile</p>
                     </a>
-                </li>
-                <li>
-                    <a href="table.html">
+                    </li>
+                    <li>
+                        <a href="table.html">
                         <i class="pe-7s-note2"></i>
-                        <p>Table List</p>
+                        <p>Greenhouse Management</p>
                     </a>
-                </li>
-                <li>
-                    <a href="typography.html">
-                        <i class="pe-7s-news-paper"></i>
-                        <p>Typography</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="icons.html">
-                        <i class="pe-7s-science"></i>
-                        <p>Icons</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="maps.html">
-                        <i class="pe-7s-map-marker"></i>
-                        <p>Maps</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="notifications.html">
+                    </li>
+                    <li>
+                        <li>
+                            <a href="notifications.html">
                         <i class="pe-7s-bell"></i>
                         <p>Notifications</p>
                     </a>
-                </li>
-				<li class="active-pro">
-                    <a href="upgrade.html">
-                        <i class="pe-7s-rocket"></i>
-                        <p>Upgrade to PRO</p>
-                    </a>
-                </li>-->
+                        </li>
                 </ul>
             </div>
         </div>
@@ -125,7 +97,7 @@
                                     <p class="hidden-lg hidden-md">Dashboard</p>
                                 </a>
                             </li>
-                            <!--<li class="dropdown">
+                            <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-globe"></i>
                                     <b class="caret hidden-sm hidden-xs"></b>
@@ -142,7 +114,7 @@
                                 <li><a href="#">Notification 4</a></li>
                                 <li><a href="#">Another notification</a></li>
                               </ul>
-                        </li>-->
+                        </li>
                             <li>
                                 <a href="">
                                     <i class="fa fa-search"></i>
@@ -152,33 +124,33 @@
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
-                            <!--<li>
-                           <a href="">
-                               <p>Account</p>
-                            </a>
-                        </li>-->
-                            <!--<li class="dropdown">
-                              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <li>
+                                <a href="">
+                                    <p>Account</p>
+                                </a>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <p>
-										Dropdown
-										<b class="caret"></b>
-									</p>
-                              </a>
-                              <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something</a></li>
-                                <li class="divider"></li>
-                                <li><a href="#">Separated link</a></li>
-                              </ul>
-                        </li>-->
-                            <!--<li>
-                            <a href="#">
-                                <p>Log out</p>
-                            </a>
-                        </li>-->
+                                        Dropdown
+                                        <b class="caret"></b>
+                                    </p>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <p>Log out</p>
+                                </a>
+                            </li>
                             <li class="separator hidden-lg hidden-md"></li>
                         </ul>
                     </div>
@@ -450,8 +422,8 @@
             <p class="copyright pull-right">
                 &copy;
                 <script>
-                                                document.write(new Date().getFullYear())
-                </script> <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+                    document.write(new Date().getFullYear())
+                </script>
             </p>
         </div>
     </footer>
@@ -486,76 +458,76 @@
 <script src="assets/js/demo.js"></script>
 
 <script type="text/javascript">
-                    var skipping = 0;
-                    var searchWhisky = function (from) {
-                        if (!from) skipping = 0;
-                        var query = $('#searchBox').val();
-                        $('#resultTable').empty();
-                        $.getJSON(`http://localhost:3030/auctionlots?text=${query}&skip=${skipping}`,
-                            (data) => {
-                                var items = [];
-                                $.each(data, function (key, val) {
-                                    items.push(`
+    var skipping = 0;
+    var searchWhisky = function (from) {
+        if (!from) skipping = 0;
+        var query = $('#searchBox').val();
+        $('#resultTable').empty();
+        $.getJSON(`http://localhost:3030/auctionlots?text=${query}&skip=${skipping}`,
+            (data) => {
+                var items = [];
+                $.each(data, function (key, val) {
+                    items.push(`
                                     <tr>
                                         <td>${val._id}</td>
                                         <td><a onclick="getDetail('${val._id}')">Detail</a></td>
                                     </tr>`
-                                    );
-                                });
-                                $('#resultTable').append(items.join(""));
-                            });
-                        skipping += 5;
-                    }
+                    );
+                });
+                $('#resultTable').append(items.join(""));
+            });
+        skipping += 5;
+    }
 
-                    var getDetail = function (query) {
+    var getDetail = function (query) {
 
-                        $.getJSON(`http://localhost:3030/similarlots?lottitle=${escape(query)}`,
-                            (data) => {
-                                var series = [];
-                                data.forEach(function (ah) {
-                                    var serie = {};
-                                    serie.name = ah._id.ah;
-                                    var data = [];
-                                    ah.winningbids.forEach(function (el) {
-                                        data.push({ x: new Date(el.auction), y: (!el.lotwinningbid || el.lotwinningbid <= 0) ? null : el.lotwinningbid })
-                                    });
-                                    data.sort((a, b) => { if (a.x > b.x) return 1; if (a.x < b.x) return -1; return 0; })
-                                    serie.data = data;
-                                    series.push(serie);
-                                });
-
-                                var chart = new Chartist.Line('.ct-chart', {
-                                    series: series
-                                }, {
-                                        lineSmooth: Chartist.Interpolation.none({
-                                            fillHoles: false
-                                        }),
-                                        showArea: true,
-                                        axisX: {
-                                            type: Chartist.FixedScaleAxis,
-                                            divisor: 25,
-                                            labelInterpolationFnc: function (value) {
-                                                return moment(value).format('MMM YY');
-                                            }
-                                        }
-                                    });
-                            });
-                    }
-
-                    $(document).ready(function () {
-
-                        // demo.initChartist();
-
-                        // $.notify({
-                        // 	icon: 'pe-7s-gift',
-                        // 	message: "Welcome to <b>Light Bootstrap Dashboard</b> - a beautiful freebie for every web developer."
-
-                        // },{
-                        //     type: 'info',
-                        //     timer: 4000
-                        // });
-
+        $.getJSON(`http://localhost:3030/similarlots?lottitle=${escape(query)}`,
+            (data) => {
+                var series = [];
+                data.forEach(function (ah) {
+                    var serie = {};
+                    serie.name = ah._id.ah;
+                    var data = [];
+                    ah.winningbids.forEach(function (el) {
+                        data.push({ x: new Date(el.auction), y: (!el.lotwinningbid || el.lotwinningbid <= 0) ? null : el.lotwinningbid })
                     });
+                    data.sort((a, b) => { if (a.x > b.x) return 1; if (a.x < b.x) return -1; return 0; })
+                    serie.data = data;
+                    series.push(serie);
+                });
+
+                var chart = new Chartist.Line('.ct-chart', {
+                    series: series
+                }, {
+                        lineSmooth: Chartist.Interpolation.none({
+                            fillHoles: false
+                        }),
+                        showArea: true,
+                        axisX: {
+                            type: Chartist.FixedScaleAxis,
+                            divisor: 25,
+                            labelInterpolationFnc: function (value) {
+                                return moment(value).format('MMM YY');
+                            }
+                        }
+                    });
+            });
+    }
+
+    $(document).ready(function () {
+
+        // demo.initChartist();
+
+        // $.notify({
+        // 	icon: 'pe-7s-gift',
+        // 	message: "Welcome to <b>Light Bootstrap Dashboard</b> - a beautiful freebie for every web developer."
+
+        // },{
+        //     type: 'info',
+        //     timer: 4000
+        // });
+
+    });
 
 </script>
 
