--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
 <body>
 
     <div class="wrapper">
-        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-5.jpg">
+        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-3.jpg">
             <!--
         Tip 2: you can also add an image using data-image tag
     -->
@@ -81,29 +81,23 @@
             <nav class="navbar navbar-default navbar-fixed">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+                    <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
-                        <a class="navbar-brand" href="#">Dashboard</a>
+                    </button>-->
+                        <a class="navbar-brand" href="#">Monitoring</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-left">
-                            <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i class="fa fa-dashboard"></i>
-                                    <p class="hidden-lg hidden-md">Dashboard</p>
-                                </a>
-                            </li>
                             <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-globe"></i>
                                     <b class="caret hidden-sm hidden-xs"></b>
                                     <span class="notification hidden-sm hidden-xs">5</span>
 									<p class="hidden-lg hidden-md">
-										5 Notifications
+										Notifications
 										<b class="caret"></b>
 									</p>
                               </a>
@@ -115,12 +109,6 @@
                                 <li><a href="#">Another notification</a></li>
                               </ul>
                         </li>
-                            <li>
-                                <a href="">
-                                    <i class="fa fa-search"></i>
-                                    <p class="hidden-lg hidden-md">Search</p>
-                                </a>
-                            </li>
                         </ul>
 
                         <ul class="nav navbar-nav navbar-right">
