--- a/table.html
+++ b/table.html
@@ -33,7 +33,7 @@
 <body>
 
 <div class="wrapper">
-        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-5.jpg">
+        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-3.jpg" onclick="demo.showNotification('top','right')">
             <!--
         Tip 2: you can also add an image using data-image tag
     -->
@@ -77,29 +77,23 @@
 		<nav class="navbar navbar-default navbar-fixed">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+                    <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Table List</a>
+                    </button>-->
+                    <a class="navbar-brand" href="#">Greenhouse manager</a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-left">
-                        <li>
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-dashboard"></i>
-								<p class="hidden-lg hidden-md">Dashboard</p>
-                            </a>
-                        </li>
                         <li class="dropdown">
                               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-globe"></i>
                                     <b class="caret hidden-sm hidden-xs"></b>
                                     <span class="notification hidden-sm hidden-xs">5</span>
 									<p class="hidden-lg hidden-md">
-										5 Notifications
+										Notifications
 										<b class="caret"></b>
 									</p>
                               </a>
@@ -110,12 +104,6 @@
                                 <li><a href="#">Notification 4</a></li>
                                 <li><a href="#">Another notification</a></li>
                               </ul>
-                        </li>
-                        <li>
-                           <a href="">
-                                <i class="fa fa-search"></i>
-								<p class="hidden-lg hidden-md">Search</p>
-                            </a>
                         </li>
                     </ul>
 
@@ -159,11 +147,12 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card">
-                            <div class="header">
-                                <h4 class="title">Striped Table with Hover</h4>
-                                <p class="category">Here is a subtitle for this table</p>
+                            <div class="header" onclick="$('#collapseExample').collapse('toggle')">
+                                <h4 class="title">Serra 1 (Sanbaruffo)</h4>
+                                <p class="category">Click to see the sensors in the greenhouse</p>
                             </div>
-                            <div class="content table-responsive table-full-width">
+                            <div class="collapse" id="collapseExample">
+                            <div class="content table-responsive table-full-width" >
                                 <table class="table table-hover table-striped">
                                     <thead>
                                         <th>ID</th>
@@ -218,6 +207,7 @@
                                     </tbody>
                                 </table>
 
+                            </div>
                             </div>
                         </div>
                     </div>
@@ -296,31 +286,9 @@
         <footer class="footer">
             <div class="container-fluid">
                 <nav class="pull-left">
-                    <ul>
-                        <li>
-                            <a href="#">
-                                Home
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Company
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                               Blog
-                            </a>
-                        </li>
-                    </ul>
                 </nav>
                 <p class="copyright pull-right">
-                    &copy; <script>document.write(new Date().getFullYear())</script> <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+                    &copy; <script>document.write(new Date().getFullYear())</script>
                 </p>
             </div>
         </footer>
