--- a/user.html
+++ b/user.html
@@ -35,7 +35,7 @@
 <body>
 
     <div class="wrapper">
-        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-5.jpg">
+        <div class="sidebar" data-color="green" data-image="assets/img/sidebar-3.jpg">
             <!--
         Tip 2: you can also add an image using data-image tag
     -->
@@ -79,29 +79,23 @@
             <nav class="navbar navbar-default navbar-fixed">
                 <div class="container-fluid">
                     <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
+                        <!--<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navigation-example-2">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
-                    </button>
-                        <a class="navbar-brand" href="#">User</a>
+                    </button>-->
+                        <a class="navbar-brand" href="#">User Profile</a>
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav navbar-left">
-                            <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <i class="fa fa-dashboard"></i>
-								<p class="hidden-lg hidden-md">Dashboard</p>
-                            </a>
-                            </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                                     <i class="fa fa-globe"></i>
                                     <b class="caret hidden-sm hidden-xs"></b>
                                     <span class="notification hidden-sm hidden-xs">5</span>
 									<p class="hidden-lg hidden-md">
-										5 Notifications
+										Notifications
 										<b class="caret"></b>
 									</p>
                               </a>
@@ -112,12 +106,6 @@
                                     <li><a href="#">Notification 4</a></li>
                                     <li><a href="#">Another notification</a></li>
                                 </ul>
-                            </li>
-                            <li>
-                                <a href="">
-                                <i class="fa fa-search"></i>
-								<p class="hidden-lg hidden-md">Search</p>
-                            </a>
                             </li>
                         </ul>
 
@@ -284,34 +272,12 @@
             <footer class="footer">
                 <div class="container-fluid">
                     <nav class="pull-left">
-                        <ul>
-                            <li>
-                                <a href="#">
-                                Home
-                            </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                Company
-                            </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                Portfolio
-                            </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                               Blog
-                            </a>
-                            </li>
-                        </ul>
                     </nav>
                     <p class="copyright pull-right">
                         &copy;
                         <script>
                             document.write(new Date().getFullYear())
-                        </script> <a href="http://www.creative-tim.com">Creative Tim</a>, made with love for a better web
+                        </script>
                     </p>
                 </div>
             </footer>
